Updated the directory scanner configuration api
